Prediction stack complete, with exception of using vistor token
