# swagger.yml
@@ -24,7 +24,7 @@ paths:
           description: "TweetQA API successfully read"
           schema:
             type: "string"
-  /controllers/v1/QAModelController/read_qa_model/{id}:
+  /v1/model/read_qa_model/{id}:
     get:
       operationId: "controllers.v1.QAModelController.read_qa_model"
       tags:
@@ -44,11 +44,7 @@ paths:
             type: "array"
             items:
               properties:
-<<<<<<< HEAD
                 id: 
-=======
-                uuid:
->>>>>>> master
                   type: "string"
                 created:
                   type: "string"
@@ -66,7 +62,7 @@ paths:
           description: "Model id not found"
           schema:
             type: "null"
-  /controllers/v1/QAModelController/read_latest_qa_model_by_type/{model_type}:
+  /v1/model/read_latest_qa_model_by_type/{model_type}:
     get:
       operationId: "controllers.v1.QAModelController.read_latest_qa_model_by_type"
       tags:
@@ -86,11 +82,7 @@ paths:
             type: "array"
             items:
               properties:
-<<<<<<< HEAD
                 id: 
-=======
-                uuid:
->>>>>>> master
                   type: "string"
                 created:
                   type: "string"
@@ -108,7 +100,7 @@ paths:
           description: "Model not found"
           schema:
             type: "null"
-  /controllers/v1/QAModelController/create_qa_model:
+  /v1/model/create_qa_model:
     post:
       operationId: "controllers.v1.QAModelController.create_qa_model"
       tags:
@@ -141,11 +133,7 @@ paths:
             type: "array"
             items:
               properties:
-<<<<<<< HEAD
                 id: 
-=======
-                uuid:
->>>>>>> master
                   type: "string"
                 created:
                   type: "string"
@@ -181,7 +169,7 @@ paths:
           description: "Successful read Tweet-Question-Answer datum operation"
           schema:
             properties:
-              qid:
+              id:
                 type: "string"
               tweet:
                 type: "string"
@@ -200,7 +188,7 @@ paths:
               end_position:
                 type: "integer"
         404:
-          description: "Failed to find Tweet-Question-Answer datum with supplied qid"
+          description: "Failed to find Tweet-Question-Answer datum with supplied id"
           schema:
             type: "null"
   /v1/data:
@@ -230,7 +218,7 @@ paths:
             description: "Successful create Tweet-Question-Answer datum operation"
             schema:
               properties:
-                qid:
+                id:
                   type: "string"
                 tweet:
                   type: "string"
@@ -248,3 +236,133 @@ paths:
                   type: "integer"
                 end_position:
                   type: "integer"
+  /v1/prediction/{id}:
+    get:
+      operationId: "controllers.v1.PredictionController.read_prediction"
+      tags:
+        - "Prediction"
+      summary: "Prediction controlller to create/read/update prediction data structures"
+      description: "Read Prediction object by id"
+      parameters:
+      - name: id
+        in: path
+        required: true
+        type: "integer"
+        format: path
+      responses:
+        200:
+          description: "Successful read prediction by id"
+          schema:
+            properties:
+              id:
+                type: "number"
+              token:
+                type: "string"
+              prediction:
+                type: "string"
+              is_corrected:
+                type: "boolean"
+              alt_answer:
+                type: "string"
+              model:
+                type: "object"
+              datum:
+                type: "object"
+        404:
+          description: "Failed to find Tweet-Question-Answer datum with supplied id"
+          schema:
+            type: "null"
+  /v1/prediction:
+    post:
+      operationId: "controllers.v1.PredictionController.create_predition"
+      tags:
+        - "PredictionController"
+      summary: "Application controller to handle QAModel request/response"
+      description: "Request to persist a given prediction DTO"
+      consumes:
+        - application/json
+      parameters:
+        - in: body
+          name: request
+          schema:
+            type: "object"
+            items:
+              properties:
+                token:
+                  type: "string"
+                model_id:
+                  type: "number"
+                datum:
+                  type: "object"
+      responses:
+        200:
+          description: "Model succesfully created"
+          schema:
+            type: "array"
+            items:
+              properties:
+                id: 
+                  type: "number"
+                token:
+                  type: "string"
+                prediction:
+                  type: "string"
+                is_corrected:
+                  type: "boolean"
+                alt_answer:
+                  type: "string"
+                model:
+                  type: "object"
+                datum:
+                  type: "object"
+        404:
+          description: "Prediction not created"
+          schema:
+            type: "null"
+  /v1/prediction/update_prediction:
+    post:
+      operationId: "controllers.v1.PredictionController.update_prediction"
+      tags:
+        - "PredictionController"
+      summary: "Application controller to handle QAModel request/response"
+      description: "Request to update a given prediction DTO"
+      consumes:
+        - application/json
+      parameters:
+        - in: body
+          name: request
+          schema:
+            type: "object"
+            items:
+              properties:
+                id:
+                  type: "string"
+                is_corrected:
+                  type: "boolean"
+                alt_answer:
+                  type: "string"
+      responses:
+        200:
+          description: "Model succesfully updated"
+          schema:
+            type: "array"
+            items:
+              properties:
+                id: 
+                  type: "number"
+                token:
+                  type: "string"
+                prediction:
+                  type: "string"
+                is_corrected:
+                  type: "boolean"
+                alt_answer:
+                  type: "string"
+                model:
+                  type: "object"
+                datum:
+                  type: "object"
+        404:
+          description: "Prediction not created"
+          schema:
+            type: "null"
